# handyscope

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE  LICENSE_bundled.txt  README.rst  pyproject.toml  setup.py
doc/: api.rst  conf.py  device.rst  deviceList.rst  generator.rst  i2cHost.rst  index.rst  jitter_free.rst  library.rst  oscilloscope.rst  oscilloscopeChannel.rst  tiepie.rst  usage.rst
doc/api/: device.rst  i2cHost.rst  jitter_free.rst  oscilloscopeChannel.rst
docs/: api.rst  conf.py  index.rst
docs/api/: device.rst  deviceList.rst  generator.rst  i2cHost.rst  jitter_free.rst  library.rst  oscilloscope.rst  oscilloscopeChannel.rst
examples/: generator_burst.py  generator_continuous.py  oscilloscope_generator_burst.py  oscilloscope_generator_continuous.py
handyscope/: device.py  deviceList.py  generator.py  i2cHost.py  jitter_free.py  library.py  oscilloscope.py  oscilloscopeChannel.py  triggerInput.py  triggerOutput.py
test/: conftest.py  test_device.py  test_deviceList.py  test_generator.py  test_oscilloscope.py  test_oscilloscopeChannel.py  test_triggerInput.py  test_triggerOutput.py
tests/: conftest.py  test_device.py  test_deviceList.py  test_generator.py  test_i2cHost.py  test_oscilloscope.py  test_oscilloscopeChannel.py  test_triggerInput.py  test_triggerOutput.py
tiepie/: __init__.py  config.json  device.py  deviceList.py  generator.py  i2cHost.py  jitter_free.py  library.py  oscilloscope.py  oscilloscopeChannel.py  triggerInput.py  triggerOutput.py
