[project]
name = "handyscope"
description = "Handyscope provides a Python interface to the mobile USB-oscilloscopes made by TiePie."
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Tim Hetkaemper", email = "timh1@mail.uni-paderborn.de"},
]
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
doc = [
    "setuptools_scm",
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest",
]

[project.urls]
homepage = "https://emt.uni-paderborn.de"

[build-system]
requires = ["setuptools_scm", "pytest-runner"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
handyscope = [
    "bin/libtiepie32.dll",
    "bin/libtiepie64.dll",
    "bin/libtiepie.so",
    "config.json",
]
