[project]
name = "handyscope"
description = "Handyscope provides a Python interface to the mobile USB-oscilloscopes made by TiePie."
dynamic = ["version"]
readme = "README.rst"
authors = [
    {name = "Tim Hetkämper", email = "timh1@mail.uni-paderborn.de"},
]
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
doc = [
    "setuptools_scm",
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest",
]

[project.urls]
Repository = "https://github.com/emtpb/handyscope/"
Issues = "https://github.com/emtpb/handyscope/issues"
Changelog = "https://github.com/emtpb/handyscope/blob/master/CHANGELOG.rst"

[build-system]
requires = ["setuptools_scm", "pytest-runner"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
handyscope = [
    "bin/libtiepie32.dll",
    "bin/libtiepie64.dll",
    "bin/libtiepie.so",
    "config.json",
]
